@@ -4,7 +4,17 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.beryx.jlink' version '3.1.1'
     id 'org.springframework.boot' version '3.2.0'
-    //id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'io.spring.dependency-management' version '1.1.4'
+}
+
+ext {
+    set('springCloudVersion', "2023.0.0")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 java {
@@ -17,6 +27,7 @@ version = '1.0.0-beta.1'
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 // Настройка JavaFX для работы в IDE и JAR
@@ -26,30 +37,57 @@ javafx {
 }
 
 dependencies {
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.0'
+    //===JavaFX зависимости===========
+    implementation 'org.openjfx:javafx-controls:21.0.8'
+    implementation 'org.openjfx:javafx-fxml:21.0.8'
+    //=======================
 
-    implementation 'org.slf4j:slf4j-api:2.0.7'
-    implementation 'ch.qos.logback:logback-classic:1.5.18'
+    //===Spring зависимости=======================
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.postgresql:postgresql'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    //implementation 'org.springframework.boot:spring-boot-starter-javafx'
 
-    compileOnly 'org.springframework.boot:spring-boot-starter-security'
+    //=======================
+
+    //===Другие зависимости============
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    implementation 'org.bitcoinj:bitcoinj-core:0.17-alpha2'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-framework-common:2.2.0'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.51.0'
+    implementation 'org.bouncycastle:bcprov-jdk18on:1.81'
+
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
+    //========================
+
+    //===БД===================
+    implementation 'org.postgresql:postgresql'
 
     runtimeOnly 'org.postgresql:postgresql'
+    //=======================
+}
+
+configurations {
+    configureEach {
+        exclude group: 'org.xerial', module: 'sqlite-jdbc'
+        exclude group: 'org.bitcoinj', module: 'bitcoinj-leveldb'
+    }
 }
 
 application {
     mainClass = 'com.cipher.Launcher';
-    mainModule = 'com.cipher';
 }
 
 jlink {
@@ -117,7 +155,7 @@ tasks.register('fatJar', Jar) {
 // Для запуска в IDE через Gradle
 tasks.named('run') {
     jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
     ]
 }
